Added about page and finished LSTM

--- a/app/static/html/model-sections/section0.html
+++ b/app/static/html/model-sections/section0.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <div id="body-container">
     <header class="model-header">
-        <h1>Welcome to the Ithaca Weather Data Tour</h1>
-        <p>Explore the dynamics of weather patterns through our statistical and machine learning models.</p>
+        <h1>Welcome to the WeatherML Tour!</h1>
+        <p>Explore the dynamics of weather patterns through statistical and machine learning models.</p>
     </header>
     <div id="panel-container">
         <div class="left-panel">
@@ -24,6 +24,12 @@
                         approaches in understanding and predicting natural phenomena. We will start with some more
                         traditional statistical models and identify their weaknesses, then move onto machine learning
                         models.</p>
+                    <p>
+                        To explore this website, use the section buttons at the bottom of each section and the graph
+                        navigation buttons. You can always hover over a block of text if you are not sure which graph
+                        you should be looking at. The ones with relevant graphs will appear green for you to click on
+                        and it will direct you to the relevant graph.
+                    </p>
                     <div class="button-container">
                         <button class=selector-button onclick="loadSection(1)">&gt;</button>
                     </div>
